src/objects/Export_Batch__c.object
<CustomObject>
    <fields>
        <fullName>Accounting_Extract_Date__c</fullName>
        <label>Accounting Extract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Export_Date__c</fullName>
        <label>Export Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <label>Tag</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Account Quarter</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Account Period</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Export Batch</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Tag__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Export_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ZEXPORT-{0}</displayFormat>
        <label>Export ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Export Batch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>